Changelog
=========

2.1 (unreleased)
----------------

* Overrride allowedContentTypes and invokeFactory from PortalFolder
  to mimic the behavior of Archetypes based folders. This allows the
  registration of IConstrainTypes adapters to actually have the
  expected effect.
  [gaudenzius]

- The default attribute accessor now also looks through subtypes
  (behaviors) to find a field default.
  [malthe]

- Added support in the FTI to look up behaviors by utility name when
  getting additional schemata (i.e. fields provided by behaviors).

  This functionality makes it possible to create a behavior where the
  interface is dynamically generated.
  [malthe]

2.0 (2012-08-30)
----------------

* Add a UID method to Dexterity items for compatibility with the Archetypes
  API.
  [davisagli]

* Remove hard dependency on zope.app.content.
  [davisagli]

* Use standard Python properties instead of rwproperty.
  [davisagli]

* Removed support for Plone 3 / CMF 2.1 / Zope 2.10.
  [davisagli]

* Update package dependencies and imports as appropriate for Zope 2.12 & 2.13.
  [davisagli]

1.1.2 - 2012-02-20
------------------

* Fix UnicodeDecodeError when getting an FTI title or description with
  non-ASCII characters.
  [davisagli]

1.1.1 - 2012-02-20
------------------

* When deleting items from a container using manage_delObjects,
  check for the "DeleteObjects" permission on each item being
  deleted. This fixes
  http://code.google.com/p/dexterity/issues/detail?id=252
  [davisagli]

1.1 - 2011-11-26
----------------

* Added Italian translation.
  [zedr]

* Ensure that a factory utility really isn't needed before removing it.
  [lentinj]

* Work around issue where user got a 404 upon adding content if a content
  rule had moved the new item to a different folder. This closes
  http://code.google.com/p/dexterity/issues/detail?id=240
  [davisagli]

* Added events: IEditBegunEvent, IEditCancelledEvent, IEditFinished, 
  IAddBegunEvent, IAddCancelledEvent
  [jbaumann]
